--- a/frontend/src/features/profile/routes/profile-route.module.css
+++ b/frontend/src/features/profile/routes/profile-route.module.css
@@ -1,4 +1,15 @@
 .main {
   display: grid;
   grid-template-columns: auto 1fr auto;
+  color: hsl(var(--c-underline));
+}
+
+a {
+  font-weight: var(--fw-button);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: hsl(var(--c-brand));
 }
