Refactor profile route

--- a/frontend/src/features/profile/routes/profile-route.module.css
+++ b/frontend/src/features/profile/routes/profile-route.module.css
@@ -3,3 +3,14 @@
   grid-template-columns: auto 1fr auto;
   color: hsl(var(--c-brand));
 }
+
+a {
+  font-weight: var(--fw-button);
+  text-decoration: none;
+  color: hsl(var(--c-underline));
+}
+
+a:hover {
+  text-decoration: underline;
+  color: hsl(var(--c-brand));
+}
