--- a/frontend/src/features/auth/components/login/login.module.css
+++ b/frontend/src/features/auth/components/login/login.module.css
@@ -115,6 +115,15 @@
   }
 }
 
+.guest-button {
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+.guest-button:hover {
+  text-decoration: underline;
+}
+
 .divider {
   border-bottom: 1px solid hsl(214, 10%, 87%);
 }
